--- a/src/page/component/frame/index.less
+++ b/src/page/component/frame/index.less
@@ -23,6 +23,9 @@
     &-options {
       display: flex;
       color: #fff;
+      span:hover {
+        color: turquoise;
+      }
       span {
         margin: 0 10px;
         cursor: pointer;
