--- a/src/page/component/frame/index.less
+++ b/src/page/component/frame/index.less
@@ -24,7 +24,7 @@
       display: flex;
       color: #fff;
       span:hover {
-        color: turquoise;
+        color: tomato;
       }
       span {
         margin: 0 10px;
